working week 4 control in sim

--- a/params.yaml
+++ b/params.yaml
@@ -1,3 +1,8 @@
+t_cam_to_body:
+- [0.1175]
+- [-0.011]
+- [0.073]
+dt: 0.05
 occupancy_map:
 - [1, 1, 1, 1, 1, 1, 1, 1]
 - [1, 0, 0, 0, 0, 0, 0, 1]
@@ -25,17 +30,18 @@ t_cam_to_body:
 - [0.0]
 - [0.0]
 world_map:
-- [0.230, 0., -1.570796, 0.0]
-- [0.383, 0., -1.570796, 1.0]
-- [0.533, 0., -1.570796, 2.0]
-- [0.758, 0.253, 0, 3.0]
-- [0.758, 0.406, 0, 4.0]
-- [0.758, 0.553, 0, 5.0]
-- [0.758, 1.048, 0, 6.0]
-- [0.758, 1.198, 0, 7.0]
-- [0.758, 1.348, 0, 8.0]
-- [0.156, 1.524, 1.570796, 9.0]
-- [0.301, 1.524, 1.570796, 10.0]
-- [0.455, 1.524, 1.570796, 11.0]
+#- [0.230, 0., -1.570796, 0.0]
+#- [0.383, 0., -1.570796, 1.0]
+#- [0.533, 0., -1.570796, 2.0]
+#- [0.758, 0.253, 0, 3.0]
+- [1.758, 0.553, 0, 3.0]
+#- [0.758, 0.406, 0, 4.0]
+#- [0.758, 0.553, 0, 5.0]
+#- [0.758, 1.048, 0, 6.0]
+#- [0.758, 1.198, 0, 7.0]
+#- [0.758, 1.348, 0, 8.0]
+#- [0.156, 1.524, 1.570796, 9.0]
+#- [0.301, 1.524, 1.570796, 10.0]
+#- [0.455, 1.524, 1.570796, 11.0]
 x_spacing: 0.1
 y_spacing: 0.16
